[feature/#233] NormalBoard test 코드 수정